--- a/index.html
+++ b/index.html
@@ -3,26 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Documento sin t&iacute;tulo</title>
-<style type="text/css">
-<!--
-body,td,th {
-	color: #00CC00;
-}
-body {
-	background-color: #000000;
-}
--->
-</style></head>
+</head>
 
 <body>
-<p>&nbsp;</p>
-<p>$zm&gt; ZonaMilitar 9 H&eacute;ctareas <br />
-$zm&gt; Experiencia Entrenamiento Militar<br />
-$zm&gt; Isla Delta del Tigre Buenos Aires Argentina <br />
-  $zm&gt; Sitio en Construci&oacute;n<br />
-  $zm&gt; Fecha de Alta de Sitio Web 27 11 2023<br />
-  $zm&gt; Email: arthurzanard@proton.me<br />
-  $zm&gt; Whatspp: +54 9 11 4159 62041 <br />
-</p>
+ZONA MILITAR 
 </body>
 </html>
